@@ -86,6 +86,17 @@
             <td>30</td>
             <td>Objects to add in the grid per row. The Y offset is applied once a row reaches this number.</td>
         </tr>
+        <tr>
+            <td>dynmap_sort</td>
+            <td></td>
+            <td>Sort method to use. Can be <code>a</code> for alphabetically order (default), <code>s</code> to
+            sort objects by state or <code>k</code> to keep the order of the backend.</td>
+        </tr>
+        <tr>
+            <td>dynmap_order</td>
+            <td>asc</td>
+            <td>Order of the objects (Available: asc/desc)</td>
+        </tr>
         </table>
     </body>
 </html>
